# AurisLeft

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/specs/: Agent-Alpha-Player.md  Agent-Beta-Home.md  Agent-Gamma-Tauri.md
electron/: main.cjs  preload.cjs
electron/assets/lx-sources/: README.md
electron/services/: appPaths.cjs  catalogSearch.cjs  db.cjs  download.cjs  handlers.cjs  localMusic.cjs  logger.cjs  lxRuntime.cjs  mediaHeaders.cjs  nativePlay.cjs  nkiQq.cjs  sources.cjs  timer.cjs
scripts/: full-user-test.cjs  probe-kuwo.cjs  probe-sources.cjs  test-jay.cjs  test-nki-qq.cjs  test-paid-play.cjs  test-play-sources.cjs  test-report.json  test-switch.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  DEPRECATED.md  tauri.conf.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: download.rs  local_music.rs  lyric.rs  mod.rs  player.rs  playlist.rs  search.rs  settings.rs  sources.rs  timer.rs
src-tauri/src/core/: audio.rs  cache.rs  downloader.rs  error.rs  events.rs  http.rs  js_runtime.rs  local_music.rs  lyric.rs  mod.rs  source.rs  storage.rs  timer.rs
src-tauri/src/models/: mod.rs
src/components/common/: AddToPlaylistDialog.css  AddToPlaylistDialog.tsx  AppLogo.tsx  CoverImage.css  CoverImage.tsx  ErrorBoundary.css  ErrorBoundary.tsx  MediaCard.css  MediaCard.tsx  Section.css  Section.tsx  TextDialog.css  TextDialog.tsx
src/components/common/Toast/: Toast.css  Toast.tsx  index.ts  useToast.ts
src/components/layout/: AppLayout.css  AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/lyric/: LyricDisplay.css  LyricDisplay.tsx
src/components/player/: AudioVisualizer.css  AudioVisualizer.tsx  NowPlaying.css  NowPlaying.tsx  PlayerBar.css  PlayerBar.tsx  QueuePanel.css  QueuePanel.tsx
src/components/playlist/: PlaylistPanel.css  PlaylistPanel.tsx  PlaylistSidebar.css  PlaylistSidebar.tsx
src/components/search/: SearchBar.css  SearchBar.tsx  SearchResults.css  SearchResults.tsx
src/core/: audioEngine.ts
src/hooks/: useLocalMusic.ts  usePlaylist.ts  useSleepTimer.ts
src/pages/DownloadManager/: index.css  index.tsx
src/pages/Favorites/: index.css  index.tsx
src/pages/Home/: index.css  index.tsx
src/pages/LocalMusic/: index.css  index.tsx
src/pages/Playlist/: index.css  index.tsx
src/pages/Search/: index.css  index.tsx
src/pages/Settings/: index.css  index.tsx
src/store/: downloadStore.ts  favoriteStore.ts  playerStore.ts  playlistStore.ts  recentStore.ts  searchStore.ts  settingsStore.ts
src/styles/: global.css  utilities.css
src/types/: index.ts
src/utils/: desktop.ts  ipc.ts  song.ts  tauri.ts
